Fix IDE warnings

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Pl3xMap Test</title>
     <style>
       body {
-        margin: 0px;
-        padding: 0px;
+        margin: 0;
+        padding: 0;
       }
       #mapid {
         width: 100%;
