A bit of progress

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pl3xMap</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+    <title></title>
+    <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="data.js"></script>
+    <script src="leaflet-rotatemarker.js"></script>
   </head>
   <body>
-    <div id="mapid"></div>
+    <div id="pl3xmap"></div>
     <script src="map.js"></script>
   </body>
 </html>
