--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -10,7 +10,7 @@
     <script src="leaflet-rotatemarker.js"></script>
   </head>
   <body>
-    <div id="pl3xmap"></div>
+    <div id="map"></div>
     <script src="map.js"></script>
   </body>
 </html>
