--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -1,8 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Pl3xMap</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta property="og:url" content="https://github.com/pl3xgaming/Pl3xMap">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Pl3xMap">
+    <meta property="og:description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta property="og:image" content="https://github.com/pl3xgaming/Pl3xMap/tree/master/src/main/resources/web/images/og.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="github.com/pl3xgaming/Pl3xMap">
+    <meta property="twitter:url" content="https://github.com/pl3xgaming/Pl3xMap">
+    <meta name="twitter:title" content="Pl3xMap">
+    <meta name="twitter:description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/tree/master/src/main/resources/web/images/og.png">
     <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css" />
