--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -20,15 +20,16 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="leaflet-rotatemarker.js"></script>
-    <script type="module" src="modules/Sidebar.js"></script>
     <script type="module" src="modules/PlayerList.js"></script>
-    <script type="module" src="modules/WorldList.js"></script>
+    <script type="module" src="modules/Sidebar.js"></script>
     <script type="module" src="modules/UICoordinates.js"></script>
-    <script type="module" src="modules/util/World.js"></script>
+    <script type="module" src="modules/WorldList.js"></script>
     <script type="module" src="modules/util/Fieldset.js"></script>
+    <script type="module" src="modules/util/Markers.js"></script>
     <script type="module" src="modules/util/Pin.js"></script>
     <script type="module" src="modules/util/Player.js"></script>
     <script type="module" src="modules/util/Spawn.js"></script>
+    <script type="module" src="modules/util/World.js"></script>
   </head>
   <body>
     <div id="map"></div>
