add link button back and stop spamming history

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -23,6 +23,7 @@
     <script type="module" src="modules/PlayerList.js"></script>
     <script type="module" src="modules/Sidebar.js"></script>
     <script type="module" src="modules/UICoordinates.js"></script>
+    <script type="module" src="modules/UILink.js"></script>
     <script type="module" src="modules/WorldList.js"></script>
     <script type="module" src="modules/util/Fieldset.js"></script>
     <script type="module" src="modules/util/Markers.js"></script>
