Projection calculation changes and organization

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -33,6 +33,6 @@
   </head>
   <body>
     <div id="map"></div>
-    <script type="module" src="map.js"></script>
+    <script type="module" src="modules/Pl3xMap.js"></script>
   </body>
 </html>
