add ellipse marker type

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -25,6 +25,7 @@
     <script type="module" src="modules/UICoordinates.js"></script>
     <script type="module" src="modules/UILink.js"></script>
     <script type="module" src="modules/WorldList.js"></script>
+    <script type="module" src="modules/util/Ellipse.js"></script>
     <script type="module" src="modules/util/Fieldset.js"></script>
     <script type="module" src="modules/util/Markers.js"></script>
     <script type="module" src="modules/util/Pin.js"></script>
