various frontend fixes and cleanup

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -8,32 +8,32 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Pl3xMap">
     <meta property="og:description" content="Blazing fast live mapping solution for Paper and friends">
-    <meta property="og:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/src/main/resources/web/images/og.png">
+    <meta property="og:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="github.com/pl3xgaming/Pl3xMap">
     <meta property="twitter:url" content="https://github.com/pl3xgaming/Pl3xMap">
     <meta name="twitter:title" content="Pl3xMap">
     <meta name="twitter:description" content="Blazing fast live mapping solution for Paper and friends">
-    <meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/src/main/resources/web/images/og.png">
+    <meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">
     <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="leaflet-rotatemarker.js"></script>
-    <script type="module" src="modules/PlayerList.js"></script>
-    <script type="module" src="modules/Sidebar.js"></script>
-    <script type="module" src="modules/UICoordinates.js"></script>
-    <script type="module" src="modules/UILink.js"></script>
-    <script type="module" src="modules/WorldList.js"></script>
-    <script type="module" src="modules/util/Ellipse.js"></script>
-    <script type="module" src="modules/util/Fieldset.js"></script>
-    <script type="module" src="modules/util/Markers.js"></script>
-    <script type="module" src="modules/util/Pin.js"></script>
-    <script type="module" src="modules/util/Player.js"></script>
-    <script type="module" src="modules/util/World.js"></script>
+    <link rel="stylesheet" href="css/leaflet-1.7.1.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/leaflet-1.7.1.js"></script>
+    <script src="js/addons/RotateMarker.js"></script>
+    <script src="js/addons/Ellipse.js"></script>
+    <script type="module" src="js/modules/PlayerList.js"></script>
+    <script type="module" src="js/modules/Sidebar.js"></script>
+    <script type="module" src="js/modules/UICoordinates.js"></script>
+    <script type="module" src="js/modules/UILink.js"></script>
+    <script type="module" src="js/modules/WorldList.js"></script>
+    <script type="module" src="js/modules/util/Fieldset.js"></script>
+    <script type="module" src="js/modules/util/Markers.js"></script>
+    <script type="module" src="js/modules/util/Pin.js"></script>
+    <script type="module" src="js/modules/util/Player.js"></script>
+    <script type="module" src="js/modules/util/World.js"></script>
   </head>
   <body>
     <div id="map"></div>
-    <script type="module" src="modules/Pl3xMap.js"></script>
+    <script type="module" src="js/modules/Pl3xMap.js"></script>
   </body>
 </html>
