use remote leaflet

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -16,9 +16,13 @@
     <meta name="twitter:description" content="Blazing fast live mapping solution for Paper and friends">
     <meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">
     <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
-    <link rel="stylesheet" href="css/leaflet-1.7.1.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin="" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="js/leaflet-1.7.1.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+      crossorigin=""></script>
     <script src="js/addons/RotateMarker.js"></script>
     <script src="js/addons/Ellipse.js"></script>
     <script type="module" src="js/modules/PlayerList.js"></script>
