phones are cool, too

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -15,6 +15,13 @@
     <meta name="twitter:title" content="Pl3xMap">
     <meta name="twitter:description" content="Blazing fast live mapping solution for Paper and friends">
     <meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#222222">
+    <meta name="keywords" content="minecraft, map, dynamic, pl3x, pl3xmap" />
+    <meta name="description" content="Minecraft Dynamic Map" />
     <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
