technical cors stuff

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -22,29 +22,29 @@
     <meta name="theme-color" content="#222222">
     <meta name="keywords" content="minecraft, map, dynamic, pl3x, pl3xmap" />
     <meta name="description" content="Minecraft Dynamic Map" />
-    <link rel="shortcut icon" href="favicon.ico" sizes="256x256" />
+    <link rel="shortcut icon" href="favicon.ico" sizes="256x256" crossOrigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-      crossorigin="" />
-    <link rel="stylesheet" href="css/styles.css" />
+      crossOrigin="anonymous" />
+    <link rel="stylesheet" href="css/styles.css" crossOrigin="anonymous" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
       integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-      crossorigin=""></script>
-    <script src="js/addons/RotateMarker.js"></script>
-    <script src="js/addons/Ellipse.js"></script>
-    <script type="module" src="js/modules/PlayerList.js"></script>
-    <script type="module" src="js/modules/Sidebar.js"></script>
-    <script type="module" src="js/modules/UICoordinates.js"></script>
-    <script type="module" src="js/modules/UILink.js"></script>
-    <script type="module" src="js/modules/WorldList.js"></script>
-    <script type="module" src="js/modules/util/Fieldset.js"></script>
-    <script type="module" src="js/modules/util/Markers.js"></script>
-    <script type="module" src="js/modules/util/Pin.js"></script>
-    <script type="module" src="js/modules/util/Player.js"></script>
-    <script type="module" src="js/modules/util/World.js"></script>
+      crossOrigin="anonymous"></script>
+    <script src="js/addons/RotateMarker.js" crossOrigin="anonymous"></script>
+    <script src="js/addons/Ellipse.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/PlayerList.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/Sidebar.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/UICoordinates.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/UILink.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/WorldList.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/util/Fieldset.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/util/Markers.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/util/Pin.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/util/Player.js" crossOrigin="anonymous"></script>
+    <script type="module" src="js/modules/util/World.js" crossOrigin="anonymous"></script>
   </head>
   <body>
     <div id="map"></div>
-    <script type="module" src="js/modules/Pl3xMap.js"></script>
+    <script type="module" src="js/modules/Pl3xMap.js" crossOrigin="anonymous"></script>
   </body>
 </html>
