Use blank page title in html

--- a/plugin/src/main/resources/web/index.html
+++ b/plugin/src/main/resources/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Pl3xMap</title>
+    <title></title>
     <meta charset="UTF-8" />
     <meta name="description" content="Blazing fast live mapping solution for Paper and friends">
     <meta property="og:url" content="https://github.com/pl3xgaming/Pl3xMap">
