--- a/common/src/main/resources/web/index.html
+++ b/common/src/main/resources/web/index.html
@@ -3,17 +3,17 @@
   <head>
     <title></title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta name="description" content="Blazing fast live mapping solution for Minecraft servers">
     <meta property="og:url" content="https://github.com/jpenilla/squaremap">
     <meta property="og:type" content="website">
     <meta property="og:title" content="squaremap">
-    <meta property="og:description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta property="og:description" content="Blazing fast live mapping solution for Minecraft servers">
     <!--<meta property="og:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">-->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="github.com/jpenilla/squaremap">
     <meta property="twitter:url" content="https://github.com/jpenilla/squaremap">
     <meta name="twitter:title" content="squaremap">
-    <meta name="twitter:description" content="Blazing fast live mapping solution for Paper and friends">
+    <meta name="twitter:description" content="Blazing fast live mapping solution for Minecraft servers">
     <!--<meta name="twitter:image" content="https://github.com/pl3xgaming/Pl3xMap/raw/master/plugin/src/main/resources/web/images/og.png">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
